--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,6 +48,12 @@
         "xmemory": "cpp",
         "xstring": "cpp",
         "xtr1common": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "sstream": "cpp",
+        "algorithm": "cpp",
+        "iomanip": "cpp",
+        "optional": "cpp",
+        "string": "cpp",
+        "vector": "cpp"
     }
 }
