--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,6 +54,7 @@
         "iomanip": "cpp",
         "optional": "cpp",
         "string": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "forward_list": "cpp"
     }
 }
